MobileLISF/src/org/merka/mobilelisf/interpreter/Parser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. Parser.java */
  package org.merka.mobilelisf.interpreter;
  import org.merka.mobilelisf.interpreter.ast.*;
import org.merka.mobilelisf.interpreter.visitor.*;


public class Parser/*@bgen(jjtree)*/implements ParserTreeConstants, ParserConstants {/*@bgen(jjtree)*/
  protected static JJTParserState jjtree = new JJTParserState();

  static final public ASTProgramma Programma() throws ParseException {
 /*@bgen(jjtree) Programma */
  ASTProgramma jjtn000 = new ASTProgramma(JJTPROGRAMMA);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Comando();
      jj_consume_token(4);
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 10:
        case 11:
        case 12:
        case 13:
        case 14:
        case VARLITERAL:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        Comando();
        jj_consume_token(4);
      }
      jj_consume_token(0);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
            {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void Comando() throws ParseException {
    Token sgn = null;
    if (jj_2_1(2)) {
                     ASTComandoAssegnamento jjtn001 = new ASTComandoAssegnamento(JJTCOMANDOASSEGNAMENTO);
                     boolean jjtc001 = true;
                     jjtree.openNodeScope(jjtn001);
      try {
        Variabile();
        jj_consume_token(5);
        Funzione();
      } catch (Throwable jjte001) {
                     if (jjtc001) {
                       jjtree.clearNodeScope(jjtn001);
                       jjtc001 = false;
                     } else {
                       jjtree.popNode();
                     }
                     if (jjte001 instanceof RuntimeException) {
                       {if (true) throw (RuntimeException)jjte001;}
                     }
                     if (jjte001 instanceof ParseException) {
                       {if (true) throw (ParseException)jjte001;}
                     }
                     {if (true) throw (Error)jjte001;}
      } finally {
                     if (jjtc001) {
                       jjtree.closeNodeScope(jjtn001, true);
                     }
      }
    } else if (jj_2_2(2)) {
                     ASTComandoCalcolo jjtn002 = new ASTComandoCalcolo(JJTCOMANDOCALCOLO);
                     boolean jjtc002 = true;
                     jjtree.openNodeScope(jjtn002);
      try {
        Variabile();
        jj_consume_token(6);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 7:
          sgn = jj_consume_token(7);
          break;
        default:
          jj_la1[1] = jj_gen;
          ;
        }
        Num();
                                                    if(sgn != null)
                                                    {
                                                        ASTNum num = (ASTNum)jjtree.peekNode();
                                                        num.setValue(- num.getValue());
                                                    }
        jj_consume_token(8);
      } catch (Throwable jjte002) {
                     if (jjtc002) {
                       jjtree.clearNodeScope(jjtn002);
                       jjtc002 = false;
                     } else {
                       jjtree.popNode();
                     }
                     if (jjte002 instanceof RuntimeException) {
                       {if (true) throw (RuntimeException)jjte002;}
                     }
                     if (jjte002 instanceof ParseException) {
                       {if (true) throw (ParseException)jjte002;}
                     }
                     {if (true) throw (Error)jjte002;}
      } finally {
                     if (jjtc002) {
                       jjtree.closeNodeScope(jjtn002, true);
                     }
      }
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VARLITERAL:
        ASTComandoStampa jjtn003 = new ASTComandoStampa(JJTCOMANDOSTAMPA);
        boolean jjtc003 = true;
        jjtree.openNodeScope(jjtn003);
        try {
          Variabile();
          jj_consume_token(9);
        } catch (Throwable jjte003) {
        if (jjtc003) {
          jjtree.clearNodeScope(jjtn003);
          jjtc003 = false;
        } else {
          jjtree.popNode();
        }
        if (jjte003 instanceof RuntimeException) {
          {if (true) throw (RuntimeException)jjte003;}
        }
        if (jjte003 instanceof ParseException) {
          {if (true) throw (ParseException)jjte003;}
        }
        {if (true) throw (Error)jjte003;}
        } finally {
        if (jjtc003) {
          jjtree.closeNodeScope(jjtn003, true);
        }
        }
        break;
      case 10:
        ASTComandoAlbero jjtn004 = new ASTComandoAlbero(JJTCOMANDOALBERO);
        boolean jjtc004 = true;
        jjtree.openNodeScope(jjtn004);
        try {
          jj_consume_token(10);
          Variabile();
        } catch (Throwable jjte004) {
        if (jjtc004) {
          jjtree.clearNodeScope(jjtn004);
          jjtc004 = false;
        } else {
          jjtree.popNode();
        }
        if (jjte004 instanceof RuntimeException) {
          {if (true) throw (RuntimeException)jjte004;}
        }
        if (jjte004 instanceof ParseException) {
          {if (true) throw (ParseException)jjte004;}
        }
        {if (true) throw (Error)jjte004;}
        } finally {
        if (jjtc004) {
          jjtree.closeNodeScope(jjtn004, true);
        }
        }
        break;
      case 11:
        ASTComandoElenco jjtn005 = new ASTComandoElenco(JJTCOMANDOELENCO);
        boolean jjtc005 = true;
        jjtree.openNodeScope(jjtn005);
        try {
          jj_consume_token(11);
        } finally {
        if (jjtc005) {
          jjtree.closeNodeScope(jjtn005, true);
        }
        }
        break;
      case 12:
        ASTComandoCancellaVariabile jjtn006 = new ASTComandoCancellaVariabile(JJTCOMANDOCANCELLAVARIABILE);
        boolean jjtc006 = true;
        jjtree.openNodeScope(jjtn006);
        try {
          jj_consume_token(12);
          Variabile();
        } catch (Throwable jjte006) {
        if (jjtc006) {
          jjtree.clearNodeScope(jjtn006);
          jjtc006 = false;
        } else {
          jjtree.popNode();
        }
        if (jjte006 instanceof RuntimeException) {
          {if (true) throw (RuntimeException)jjte006;}
        }
        if (jjte006 instanceof ParseException) {
          {if (true) throw (ParseException)jjte006;}
        }
        {if (true) throw (Error)jjte006;}
        } finally {
        if (jjtc006) {
          jjtree.closeNodeScope(jjtn006, true);
        }
        }
        break;
      case 13:
        ASTComandoCancellaTutto jjtn007 = new ASTComandoCancellaTutto(JJTCOMANDOCANCELLATUTTO);
        boolean jjtc007 = true;
        jjtree.openNodeScope(jjtn007);
        try {
          jj_consume_token(13);
        } finally {
        if (jjtc007) {
          jjtree.closeNodeScope(jjtn007, true);
        }
        }
        break;
      case 14:
        ASTComandoDisegno jjtn008 = new ASTComandoDisegno(JJTCOMANDODISEGNO);
        boolean jjtc008 = true;
        jjtree.openNodeScope(jjtn008);
        try {
          jj_consume_token(14);
          Variabile();
        } catch (Throwable jjte008) {
        if (jjtc008) {
          jjtree.clearNodeScope(jjtn008);
          jjtc008 = false;
        } else {
          jjtree.popNode();
        }
        if (jjte008 instanceof RuntimeException) {
          {if (true) throw (RuntimeException)jjte008;}
        }
        if (jjte008 instanceof ParseException) {
          {if (true) throw (ParseException)jjte008;}
        }
        {if (true) throw (Error)jjte008;}
        } finally {
        if (jjtc008) {
          jjtree.closeNodeScope(jjtn008, true);
        }
        }
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void Funzione() throws ParseException {
    Termine();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 7:
      case 15:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_2;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 15:
        jj_consume_token(15);
                     ASTSomma jjtn001 = new ASTSomma(JJTSOMMA);
                     boolean jjtc001 = true;
                     jjtree.openNodeScope(jjtn001);
        try {
          Termine();
        } catch (Throwable jjte001) {
                     if (jjtc001) {
                       jjtree.clearNodeScope(jjtn001);
                       jjtc001 = false;
                     } else {
                       jjtree.popNode();
                     }
                     if (jjte001 instanceof RuntimeException) {
                       {if (true) throw (RuntimeException)jjte001;}
                     }
                     if (jjte001 instanceof ParseException) {
                       {if (true) throw (ParseException)jjte001;}
                     }
                     {if (true) throw (Error)jjte001;}
        } finally {
                     if (jjtc001) {
                       jjtree.closeNodeScope(jjtn001,  2);
                     }
        }
        break;
      case 7:
        jj_consume_token(7);
                                               ASTDifferenza jjtn002 = new ASTDifferenza(JJTDIFFERENZA);
                                               boolean jjtc002 = true;
                                               jjtree.openNodeScope(jjtn002);
        try {
          Termine();
        } catch (Throwable jjte002) {
                                               if (jjtc002) {
                                                 jjtree.clearNodeScope(jjtn002);
                                                 jjtc002 = false;
                                               } else {
                                                 jjtree.popNode();
                                               }
                                               if (jjte002 instanceof RuntimeException) {
                                                 {if (true) throw (RuntimeException)jjte002;}
                                               }
                                               if (jjte002 instanceof ParseException) {
                                                 {if (true) throw (ParseException)jjte002;}
                                               }
                                               {if (true) throw (Error)jjte002;}
        } finally {
                                               if (jjtc002) {
                                                 jjtree.closeNodeScope(jjtn002,  2);
                                               }
        }
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void Termine() throws ParseException {
    Monomio();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 16:
      case 17:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_3;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 16:
        jj_consume_token(16);
                      ASTProdotto jjtn001 = new ASTProdotto(JJTPRODOTTO);
                      boolean jjtc001 = true;
                      jjtree.openNodeScope(jjtn001);
        try {
          Monomio();
        } catch (Throwable jjte001) {
                      if (jjtc001) {
                        jjtree.clearNodeScope(jjtn001);
                        jjtc001 = false;
                      } else {
                        jjtree.popNode();
                      }
                      if (jjte001 instanceof RuntimeException) {
                        {if (true) throw (RuntimeException)jjte001;}
                      }
                      if (jjte001 instanceof ParseException) {
                        {if (true) throw (ParseException)jjte001;}
                      }
                      {if (true) throw (Error)jjte001;}
        } finally {
                      if (jjtc001) {
                        jjtree.closeNodeScope(jjtn001,  2);
                      }
        }
        break;
      case 17:
        jj_consume_token(17);
                                                   ASTDivisione jjtn002 = new ASTDivisione(JJTDIVISIONE);
                                                   boolean jjtc002 = true;
                                                   jjtree.openNodeScope(jjtn002);
        try {
          Monomio();
        } catch (Throwable jjte002) {
                                                   if (jjtc002) {
                                                     jjtree.clearNodeScope(jjtn002);
                                                     jjtc002 = false;
                                                   } else {
                                                     jjtree.popNode();
                                                   }
                                                   if (jjte002 instanceof RuntimeException) {
                                                     {if (true) throw (RuntimeException)jjte002;}
                                                   }
                                                   if (jjte002 instanceof ParseException) {
                                                     {if (true) throw (ParseException)jjte002;}
                                                   }
                                                   {if (true) throw (Error)jjte002;}
        } finally {
                                                   if (jjtc002) {
                                                     jjtree.closeNodeScope(jjtn002,  2);
                                                   }
        }
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

    /*
     *  questa parte di grammatica (Monomio) viene modificata:
     *  il simbolo "^" deve essere trattato come un operatore binario, associativo a sinistra
     *  e con maggiore priorità
    */
/*
void Monomio() #void:
{
    Node n, esp;
}
{*/
    /*Qui dà un warning, cmq il parser funziona correttamente (stessa situazione del "dangling else")*/
    /*l'esponente viene automaticamente associato all'espansione più interna*/
  /*
    MonomioSemplice() {n = jjtree.popNode();}
                      [Esponente() 
                        {
                         esp = jjtree.popNode();
                         ASTMonomio monomioConEsp = new ASTMonomio(ParserTreeConstants.JJTMONOMIO);
                         monomioConEsp.jjtAddChild(n,0);
                         monomioConEsp.jjtAddChild(esp,1);
                         n = monomioConEsp;
                        }
                      ] 
                      {jjtree.pushNode(n);} #Monomio(false)
}*/


/*
 *  segue la nuova grammatica 
 *  per la produzione di Monomio (Molto più semplice, non è vero?)
 *  Monomio -> MonomioSemplice ("^" MonomioSemplice)*
*/
  static final public void Monomio() throws ParseException {
    MonomioSemplice();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 18:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_4;
      }
      jj_consume_token(18);
                              ASTMonomio jjtn001 = new ASTMonomio(JJTMONOMIO);
                              boolean jjtc001 = true;
                              jjtree.openNodeScope(jjtn001);
      try {
        MonomioSemplice();
      } catch (Throwable jjte001) {
                              if (jjtc001) {
                                jjtree.clearNodeScope(jjtn001);
                                jjtc001 = false;
                              } else {
                                jjtree.popNode();
                              }
                              if (jjte001 instanceof RuntimeException) {
                                {if (true) throw (RuntimeException)jjte001;}
                              }
                              if (jjte001 instanceof ParseException) {
                                {if (true) throw (ParseException)jjte001;}
                              }
                              {if (true) throw (Error)jjte001;}
      } finally {
                              if (jjtc001) {
                                jjtree.closeNodeScope(jjtn001,  2);
                              }
      }
    }
  }

  static final public void MonomioSemplice() throws ParseException {
    Node var;
    Node arg = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTERO:
      Num();
      break;
    case VARLITERAL:
      Variabile();
         var = jjtree.popNode();
      jj_consume_token(6);
      Funzione();
      jj_consume_token(19);
                        arg = jjtree.popNode();
            if (arg != null)
            var.jjtAddChild(arg,0);
            jjtree.pushNode(var);
      break;
    case VARINDIPLITERAL:
      VariabileIndipendente();
      break;
    case 20:
    case 21:
      Seno();
      break;
    case 22:
      Coseno();
      break;
    case 23:
    case 24:
      Tangente();
      break;
    case 25:
    case 26:
      Cotangente();
      break;
    case 27:
    case 28:
      ArcoSeno();
      break;
    case 29:
      ArcoCoseno();
      break;
    case 30:
    case 31:
      ArcoTangente();
      break;
    case 32:
    case 33:
      ArcoCotangente();
      break;
    case 7:
      MonomioNegativo();
      break;
    case 34:
      LogaritmoNaturale();
      break;
    case 35:
      Logaritmo();
      break;
    case 38:
      ValoreAssoluto();
      break;
    case 39:
      Esponenziale();
      break;
    case 40:
      Fattoriale();
      break;
    case 41:
      Radice();
      break;
    case 6:
      jj_consume_token(6);
      Funzione();
      jj_consume_token(19);
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Num() throws ParseException {
 /*@bgen(jjtree) Num */
    ASTNum jjtn000 = new ASTNum(JJTNUM);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);Token parteInt = null;
    Token parteFraz = null;
    double value;
    try {
      parteInt = jj_consume_token(INTERO);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PARTEFRAZ:
        parteFraz = jj_consume_token(PARTEFRAZ);
        break;
      default:
        jj_la1[9] = jj_gen;
        ;
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
            if (parteFraz == null)
                value = Double.parseDouble(parteInt.image);
            else
                value = Double.parseDouble(parteInt.image+parteFraz.image);
            jjtn000.setValue(value);
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void Seno() throws ParseException {
 /*@bgen(jjtree) Seno */
  ASTSeno jjtn000 = new ASTSeno(JJTSENO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 20:
        jj_consume_token(20);
        break;
      case 21:
        jj_consume_token(21);
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      Monomio();
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void Coseno() throws ParseException {
 /*@bgen(jjtree) Coseno */
  ASTCoseno jjtn000 = new ASTCoseno(JJTCOSENO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(22);
      Monomio();
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void Tangente() throws ParseException {
 /*@bgen(jjtree) Tangente */
  ASTTangente jjtn000 = new ASTTangente(JJTTANGENTE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 23:
        jj_consume_token(23);
        break;
      case 24:
        jj_consume_token(24);
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      Monomio();
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void Cotangente() throws ParseException {
 /*@bgen(jjtree) Cotangente */
  ASTCotangente jjtn000 = new ASTCotangente(JJTCOTANGENTE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 25:
        jj_consume_token(25);
        break;
      case 26:
        jj_consume_token(26);
        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      Monomio();
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void ArcoSeno() throws ParseException {
 /*@bgen(jjtree) ArcoSeno */
  ASTArcoSeno jjtn000 = new ASTArcoSeno(JJTARCOSENO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 27:
        jj_consume_token(27);
        break;
      case 28:
        jj_consume_token(28);
        break;
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      Monomio();
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void ArcoCoseno() throws ParseException {
 /*@bgen(jjtree) ArcoCoseno */
  ASTArcoCoseno jjtn000 = new ASTArcoCoseno(JJTARCOCOSENO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(29);
      Monomio();
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void ArcoTangente() throws ParseException {
 /*@bgen(jjtree) ArcoTangente */
  ASTArcoTangente jjtn000 = new ASTArcoTangente(JJTARCOTANGENTE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 30:
        jj_consume_token(30);
        break;
      case 31:
        jj_consume_token(31);
        break;
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      Monomio();
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void ArcoCotangente() throws ParseException {
 /*@bgen(jjtree) ArcoCotangente */
  ASTArcoCotangente jjtn000 = new ASTArcoCotangente(JJTARCOCOTANGENTE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 32:
        jj_consume_token(32);
        break;
      case 33:
        jj_consume_token(33);
        break;
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      Monomio();
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

